Lists of authors and reviewers updated

--- a/D2.4/D2_4.tex
+++ b/D2.4/D2_4.tex
@@ -29,7 +29,7 @@
 
 
 %assign a report number here
-\reportnum{OETCS/WP2/D2.4~--~01.00}
+\reportnum{OETCS/WP2/D2.4~--~01.01}
 
 %define your workpackage here
 \wp{Work-Package 2: ``Definition''}
@@ -85,7 +85,7 @@ Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.4\\
 \hline
 Document title & Definition of the methods used to perform the formal description \\
-Document version & 01.00 \\
+Document version & 01.01 \\
 Document authors (org.)  & Marielle Petit-Doche (Systerel)  \\
   & David Mentré (Mitsubishi Electric R\&D Centre Europe)  \\
   & Mathias Güdemann (Systerel)  \\
@@ -101,7 +101,8 @@ Last version reviewed & 00.04 \\
 Main reviewers & S. Baro (SNCF) \\
 & P. Mahlmann (DB), B. Hekele (DB)\\
 & H. Hungar (DLR), M. Behrens (DLR) \\
-& J. Welte ( TU-BS) \\
+& J. Welte (TU-BS), U. Steinke (Siemens) \\
+& M. Perin (CEA) \\
 \hline
 \end{tabular}
 
@@ -114,6 +115,8 @@ Main reviewers & S. Baro (SNCF) \\
 Written by    &  Marielle Petit-Doche & T2.4 Sub-Task Leader  & January 2014 \\
 & David Mentré & & \\
 & Matthias Güdemann & & \\
+& Uwe Steinke & & \\
+& Matthieu Perin & & \\
 \hline
 Approved by & Gilles Dalmas & WP2 leader & \\
 \hline
@@ -134,13 +137,15 @@ the document \\
 \hline  
 00.04 & 26/09/2013 & M. Petit-Doche, D. Mentré & First version of sections 7, 8 and 9   \\
 \hline  
-00.05 & 16/12/2013 & M. Petit-Doche & Section 7  \\
+00.05 & 16/12/2013 & M. Petit-Doche, M. Perin & Sections 7, 8.1  \\
 \hline  
 00.06 & 03/01/2014 & Uwe Steinke & Section 7.4 and 7.5  \\
 \hline  
 00.07 & 09/01/2014 & M. Petit-Doche & Issues \#33, Sections 6.3, 7.1, 9  \\
 \hline  
 01.00 & 11/01/2014 & M. Petit-Doche & Issues \# 27, 36, 37, 39, Final version  \\
+\hline  
+01.01 & 15/01/2014 & M. Petit-Doche & Update author and reviewer lists  \\
 \hline  
 \end{tabular}
 
